# ChangeLog for media-sound/gpodder
# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-sound/gpodder/ChangeLog,v 1.8 2007/07/29 22:12:06 hanno Exp $

*gpodder-0.9.4 (29 Jul 2007)

  29 Jul 2007; Hanno Boeck <hanno@gentoo.org> +gpodder-0.9.4.ebuild:
  Version bump.

*gpodder-0.9.2 (11 Jun 2007)

  11 Jun 2007; Hanno Boeck <hanno@gentoo.org> +gpodder-0.9.2.ebuild:
  Version bump.

*gpodder-0.9.1 (14 May 2007)

  14 May 2007; Hanno Boeck <hanno@gentoo.org> +gpodder-0.9.1.ebuild:
  Version bump.

*gpodder-0.9.0 (02 Apr 2007)

  02 Apr 2007; Hanno Boeck <hanno@gentoo.org> +gpodder-0.9.0.ebuild:
  Version bump.

*gpodder-0.8.9 (14 Feb 2007)

  14 Feb 2007; Hanno Boeck <hanno@gentoo.org> +gpodder-0.8.9.ebuild:
  Version bump.

  23 Jan 2007; Steve Dibb <beandog@gentoo.org> gpodder-0.7.ebuild,
  gpodder-0.8.0.ebuild:
  Add ~amd64, bug 163397

*gpodder-0.8.0 (28 Jul 2006)

  28 Jul 2006; Hanno Boeck <hanno@gentoo.org> +gpodder-0.8.0.ebuild:
  Version bump.

*gpodder-0.7 (28 Jun 2006)

  28 Jun 2006; Hanno Boeck <hanno@gentoo.org> +metadata.xml,
  +gpodder-0.7.ebuild:
  Initial commit.
