@@ -2,14 +2,19 @@
 Hash: SHA1
 
 DIST gpodder-0.9.4.tar.gz 199268 RMD160 c4afb0d97af787b81f1f4fd13d9743fc39069815 SHA1 eb7190f9ba7f845bc7b70a7ee7727e14ae81a8a3 SHA256 b0653f0821b044cee811678035ad6bc34a83d981086e3961ddba35bc3749cfda
+DIST gpodder-0.9.5.tar.gz 203635 RMD160 d69f7b30e90b18403314af85d41b05759ea7ebaf SHA1 a2fded9f84319b49d503ed93b4bdf594dba68cb0 SHA256 9a5c29bb20bf19aefd730165fe7af03f84aa19694d1085e6673e4098167be7d2
 EBUILD gpodder-0.9.4.ebuild 684 RMD160 13e89dc348d4a9ca44655c05ed701b6e18638fcc SHA1 0efc521f88ba9f7ab067ffeab8ad17a26f15724d SHA256 6c4663fcc799be32a6c9de65c337e498dd42b9429942903a736a0aa5318e56da
 MD5 e535bf5a02e438f17c83ff92b888db94 gpodder-0.9.4.ebuild 684
 RMD160 13e89dc348d4a9ca44655c05ed701b6e18638fcc gpodder-0.9.4.ebuild 684
 SHA256 6c4663fcc799be32a6c9de65c337e498dd42b9429942903a736a0aa5318e56da gpodder-0.9.4.ebuild 684
-MISC ChangeLog 1154 RMD160 eb53465ebb8cbfed1ca712aed9ea867dca273d84 SHA1 19dd95a7a1f724d10bfbcb7d2583aa255059f033 SHA256 8ef66c26947687421e339bc4db38143b67d9b32497d2c4a0957dfa2cd6ee3cb1
-MD5 0fea61012fa055895f0a9ced9a848d2e ChangeLog 1154
-RMD160 eb53465ebb8cbfed1ca712aed9ea867dca273d84 ChangeLog 1154
-SHA256 8ef66c26947687421e339bc4db38143b67d9b32497d2c4a0957dfa2cd6ee3cb1 ChangeLog 1154
+EBUILD gpodder-0.9.5.ebuild 707 RMD160 d20e44096b383cad459123f22d1e5fd57dc07753 SHA1 fd3b29ec60e8fbf20a1d1ac1996dd81778d25e1e SHA256 bf53262dc99be8b6d4810a9cefc21cc2bb33a9c9e85b50214a7eebe5bbf78bb3
+MD5 8a186419a70713c25a92ee4ce383fb02 gpodder-0.9.5.ebuild 707
+RMD160 d20e44096b383cad459123f22d1e5fd57dc07753 gpodder-0.9.5.ebuild 707
+SHA256 bf53262dc99be8b6d4810a9cefc21cc2bb33a9c9e85b50214a7eebe5bbf78bb3 gpodder-0.9.5.ebuild 707
+MISC ChangeLog 1270 RMD160 1b54a47585e07074ad6abb8e67d93c274e9c2280 SHA1 c3e0919c4105bf8c469ff87f9c97ad9d308c7726 SHA256 16e76dd6af31e0f5f4f4845685b92734a9907066daae8d9004f54fe1523f81c2
+MD5 82e8bec077eccb834b312737e767d2c1 ChangeLog 1270
+RMD160 1b54a47585e07074ad6abb8e67d93c274e9c2280 ChangeLog 1270
+SHA256 16e76dd6af31e0f5f4f4845685b92734a9907066daae8d9004f54fe1523f81c2 ChangeLog 1270
 MISC metadata.xml 217 RMD160 3b01d5dab901ee93217f72b711954d3cccbb1717 SHA1 e304788b60dd2cf214d360a21d267e8635474d98 SHA256 2f5dfc1eb79d2d9ee02663da6e1449f499c3a37b7f4cc2391e18d7789a314669
 MD5 a72a06a37ca4e5905085ebff07fe9e9e metadata.xml 217
 RMD160 3b01d5dab901ee93217f72b711954d3cccbb1717 metadata.xml 217
@@ -17,10 +22,13 @@ SHA256 2f5dfc1eb79d2d9ee02663da6e1449f499c3a37b7f4cc2391e18d7789a314669 metadata
 MD5 960c9f597b4be2cfb6913978c59b968a files/digest-gpodder-0.9.4 241
 RMD160 578f94138636ac6a3082420b8dd713fb19b95a4e files/digest-gpodder-0.9.4 241
 SHA256 14900a47770a3c55d6ddc351418027eceb79d1f55817d7deb02b53dcf28b4553 files/digest-gpodder-0.9.4 241
+MD5 caab7262dbd8034cff4aa7ee62e0b0c9 files/digest-gpodder-0.9.5 241
+RMD160 170dac2cd83d66d2baa4930284698ad7a6236273 files/digest-gpodder-0.9.5 241
+SHA256 4b7f220f5a72948fc1816c845cddceeb3794c9636b9be9ef9466a7d8c7b6957f files/digest-gpodder-0.9.5 241
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.7 (GNU/Linux)
 
-iD8DBQFG8E5Xr2QksT29OyARAllVAKCRlQ8KdzFmOiwSzS2XYJnTYNr8JQCffkfF
-PoxrCDBc66DD1X2L3nJRBFM=
-=/GDN
+iD8DBQFG8E8kr2QksT29OyARAvauAJ95y+o1MN3VmLjv1Zld2TYy1vq/9wCcDdxf
+puuZPxo18/rKZg4PoF2u2vU=
+=AGqP
 -----END PGP SIGNATURE-----
