@@ -1,0 +1,3 @@
+MD5 e4f20925ce5f7f18b5a52bb3ffcd8b6d gpodder-0.9.5.tar.gz 203635
+RMD160 d69f7b30e90b18403314af85d41b05759ea7ebaf gpodder-0.9.5.tar.gz 203635
+SHA256 9a5c29bb20bf19aefd730165fe7af03f84aa19694d1085e6673e4098167be7d2 gpodder-0.9.5.tar.gz 203635
