@@ -1,6 +1,11 @@
 # ChangeLog for media-sound/gpodder
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-sound/gpodder/ChangeLog,v 1.8 2007/07/29 22:12:06 hanno Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-sound/gpodder/ChangeLog,v 1.9 2007/09/18 22:17:24 hanno Exp $
+
+*gpodder-0.9.5 (18 Sep 2007)
+
+  18 Sep 2007; Hanno Boeck <hanno@gentoo.org> +gpodder-0.9.5.ebuild:
+  Version bump.
 
 *gpodder-0.9.4 (29 Jul 2007)
 
